test/syntax/pass/attrs/warn_unknown_attr.sync
[@unknown]
let f x = x
