test/syntax/fail/not_combinatorial/let_node_call.sync
let node f x = x
let y = f true
